# tesi_

distill_kd_lab/: fedKD.py
femnist_lab/: =0.3.0  pyproject.toml  ris-5-adag.csv  ris-5-prox.csv  ris-7-adag.csv  ris-7-adam.csv  ris-adagard.csv  start_experiment.sh
femnist_lab/femnist_processed/client_0/: test_features.pt  test_labels.pt  test_map.json  train_features.pt  train_labels.pt  train_map.json
femnist_lab/femnist_processed/client_1/: test_features.pt  test_labels.pt  test_map.json  train_features.pt  train_labels.pt  train_map.json
femnist_lab/femnist_processed/client_2/: test_features.pt  test_labels.pt  test_map.json  train_features.pt  train_labels.pt  train_map.json
femnist_lab/femnist_processed/client_3/: test_features.pt  test_labels.pt  test_map.json  train_features.pt  train_labels.pt  train_map.json
femnist_lab/femnist_processed/client_4/: test_features.pt  test_labels.pt  test_map.json  train_features.pt  train_labels.pt  train_map.json
femnist_lab/femnist_processed/client_5/: test_features.pt  test_labels.pt  test_map.json  train_features.pt  train_labels.pt  train_map.json
femnist_lab/femnist_processed/client_6/: test_features.pt  test_labels.pt  test_map.json  train_features.pt  train_labels.pt  train_map.json
femnist_lab/irds_fe/: __init__.py  client_app.py  server_app.py  task.py
md_lab/: FedMd2.py  FedMd2_5.py  FedMd2_7.py
